<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!--My portfolio app -->
    <string name="nanodegree">My Nanodegree Apps!</string>
    <string name="spotify">Spotify Streamer</string>
    <string name="scores">Scores App</string>
    <string name="library">Library App</string>
    <string name="bigger">Build it Bigger</string>
    <string name="reader">XYZ Reader</string>
    <string name="my_app">Capstone:My Own App</string>

    <string name="spotify_message">This button will launch Spotify Streamer app!</string>
    <string name="scores_message">This button will launch Football Scores app!</string>
    <string name="library_message">This button will launch Library app!</string>
    <string name="build_bigger_message">This button will launch Build It Bigger app!</string>
    <string name="reader_message">This button will launch XYZ Reader app!</string>
    <string name="capstone_message">This button will launch my capstone app!</string>

</resources>
